universal-access: Redesign for consistency and smallness

https://bugzilla.gnome.org/show_bug.cgi?id=665588